# burn_p2p

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
crates/burn_p2p/: Cargo.toml
crates/burn_p2p/benches/: diloco_codec.rs
crates/burn_p2p/examples/: burn_ndarray_runtime.rs  family_workload_minimal.rs  synthetic_trainer.rs
crates/burn_p2p/src/: app_view.rs  backend.rs  browser_join.rs  burn.rs  candidate.rs  candidate_screening.rs  compat.rs  config.rs  edge_auth.rs  handles.rs  lib.rs  metrics_runtime.rs  node.rs  portal.rs  project_family.rs  promotion.rs  runtime_support.rs  tests.rs  training.rs  validation.rs
crates/burn_p2p/src/burn/: advanced.rs  dataset.rs  learner.rs  tests.rs
crates/burn_p2p/src/candidate/: discovery.rs  model.rs  tests.rs
crates/burn_p2p/src/config/: runtime.rs  storage.rs
crates/burn_p2p/src/diloco/: codec.rs  engine.rs  mod.rs  network.rs  test_support.rs  tests.rs
crates/burn_p2p/src/node/: artifacts.rs  builder.rs  experiments.rs  lifecycle.rs  selected.rs
crates/burn_p2p/src/promotion/: diffusion.rs
crates/burn_p2p/src/runtime_support/: control_plane.rs  persistence.rs  placement.rs  signing.rs  tests.rs  topology.rs  trust.rs
crates/burn_p2p/src/tests/: artifacts.rs  basics.rs  distributed.rs  family.rs  mod.rs  security.rs  support.rs  training.rs  validation.rs
crates/burn_p2p/src/training/: tests.rs  (+3 more)
crates/burn_p2p_admin/: Cargo.toml
crates/burn_p2p_admin/src/: lib.rs
crates/burn_p2p_app/: Cargo.toml
crates/burn_p2p_app/src/: assertions.rs  lib.rs  models.rs  render.rs  tests.rs  widgets.rs
crates/burn_p2p_auth_external/: Cargo.toml
crates/burn_p2p_auth_external/src/: lib.rs  oidc.rs  provider.rs  proxy.rs  shared.rs  tests.rs
crates/burn_p2p_auth_github/: Cargo.toml
crates/burn_p2p_auth_github/src/: lib.rs
crates/burn_p2p_auth_oauth/: Cargo.toml
crates/burn_p2p_auth_oauth/src/: lib.rs
crates/burn_p2p_auth_oidc/: Cargo.toml
crates/burn_p2p_auth_oidc/src/: lib.rs
crates/burn_p2p_bootstrap/: Cargo.toml
crates/burn_p2p_bootstrap/examples/: authenticated-bootstrap.json  community-web.json  embedded-validator.json  embedded_runtime_daemon.rs  enterprise-sso.json  local-bootstrap.json  trusted-browser.json  trusted-minimal.json
crates/burn_p2p_bootstrap/src/: admin.rs  app_render.rs  artifact_mirror.rs  browser_edge.rs  daemon.rs  deploy.rs  history.rs  lib.rs  metrics.rs  operator_store.rs  portal.rs  publication.rs  state.rs
crates/burn_p2p_browser/: Cargo.toml
crates/burn_p2p_browser/src/: app.rs  auth.rs  bridge.rs  capability.rs  conformance.rs  durability.rs  lib.rs  participant.rs  runtime.rs  site_config.rs  storage.rs  tests.rs  training.rs  transport.rs  ui_bindings.rs  validation.rs  worker.rs
crates/burn_p2p_checkpoint/: Cargo.toml
crates/burn_p2p_checkpoint/benches/: artifact_pipeline.rs
crates/burn_p2p_checkpoint/src/: lib.rs
crates/burn_p2p_core/: Cargo.toml
crates/burn_p2p_core/src/: codec.rs  diagnostics.rs  id.rs  lib.rs  schema.rs  time.rs
crates/burn_p2p_dataloader/: Cargo.toml
crates/burn_p2p_dataloader/benches/: planning.rs
crates/burn_p2p_dataloader/src/: cache.rs  fetch.rs  lease.rs  lib.rs  planner.rs  receipt.rs  registration.rs
crates/burn_p2p_e2e/: Cargo.toml
crates/burn_p2p_e2e/src/: lib.rs  live_browser.rs
crates/burn_p2p_engine/: Cargo.toml
crates/burn_p2p_engine/benches/: module_merge.rs
crates/burn_p2p_engine/src/: lib.rs
crates/burn_p2p_experiment/: Cargo.toml
crates/burn_p2p_experiment/src/: builders.rs  control.rs  directory.rs  lib.rs  spec.rs  topology.rs
crates/burn_p2p_limits/: Cargo.toml
crates/burn_p2p_limits/benches/: capability.rs
crates/burn_p2p_limits/src/: lib.rs
crates/burn_p2p_metrics/: Cargo.toml
crates/burn_p2p_metrics/src/: derive.rs  lib.rs  query.rs  retention.rs  store.rs
crates/burn_p2p_portal/: Cargo.toml
crates/burn_p2p_portal/src/: lib.rs  models.rs  render.rs  tests.rs
crates/burn_p2p_publish/: Cargo.toml
crates/burn_p2p_publish/src/: aliases.rs  backends.rs  download.rs  jobs.rs  lib.rs  registry.rs  views.rs
crates/burn_p2p_python/: Cargo.toml
crates/burn_p2p_python/src/: lib.rs  worker.rs
crates/burn_p2p_security/: Cargo.toml
crates/burn_p2p_security/benches/: security.rs
crates/burn_p2p_security/src/: lib.rs
crates/burn_p2p_social/: Cargo.toml
crates/burn_p2p_social/src/: lib.rs
crates/burn_p2p_swarm/: Cargo.toml
crates/burn_p2p_swarm/benches/: control_plane.rs
crates/burn_p2p_swarm/src/: browser_edge.rs  browser_runtime.rs  control_shell.rs  diloco_store.rs  events.rs  lib.rs  memory_control.rs  memory_swarm.rs  native_control.rs  runtime_helpers.rs  stats.rs  tests.rs  types.rs
crates/burn_p2p_testkit/: Cargo.toml
crates/burn_p2p_testkit/benches/: browser_path.rs  merge_topology.rs
crates/burn_p2p_testkit/examples/: native-soak.json  native-stress-32.json
crates/burn_p2p_testkit/playwright/: browser_real_device_probe.mjs
crates/burn_p2p_testkit/scripts/: browser_real_device_probe.mjs  portal_playwright_capture.mjs
crates/burn_p2p_testkit/src/: browser_app_assets.rs  formal_trace.rs  lib.rs  merge_topology.rs  multiprocess.rs  portal_capture.rs
crates/burn_p2p_testkit/tests/: browser_matrix.rs  browser_real_device.rs  browser_swarm_transport.rs  deployment_profiles.rs  examples_compile.rs  mixed_browser_worker.rs  multiprocess.rs  portal_playwright.rs
crates/burn_p2p_ui/: Cargo.toml
crates/burn_p2p_ui/src/: auth.rs  browser_app.rs  dashboard.rs  lib.rs  tests.rs
crates/burn_p2p_views/: Cargo.toml
crates/burn_p2p_views/src/: auth.rs  browser_app.rs  dashboard.rs  lib.rs  operator_rollout.rs  robustness.rs  tests.rs  training.rs
crates/burn_p2p_webrtc/: CHANGELOG.md  Cargo.toml
crates/burn_p2p_webrtc/src/: lib.rs
crates/burn_p2p_webrtc/tests/: smoke.rs
crates/burn_p2p_webrtc_websys/: Cargo.toml  README.md
crates/burn_p2p_webrtc_websys/src/: connection.rs  sdp.rs  transport.rs  upgrade.rs
xtask/: Cargo.toml
xtask/src/: artifacts.rs  cli.rs  formal.rs  main.rs  profile.rs  runner.rs
(+239 files in other folders)
