[workspace]
resolver = "3"
members = [
  "crates/burn_p2p",
  "crates/burn_p2p_auth_external",
  "crates/burn_p2p_auth_github",
  "crates/burn_p2p_auth_oidc",
  "crates/burn_p2p_auth_oauth",
  "crates/burn_p2p_metrics",
  "crates/burn_p2p_publish",
  "crates/burn_p2p_portal",
  "crates/burn_p2p_social",
  "crates/burn_p2p_bootstrap",
  "crates/burn_p2p_browser",
  "crates/burn_p2p_engine",
  "crates/burn_p2p_checkpoint",
  "crates/burn_p2p_core",
  "crates/burn_p2p_dataloader",
  "crates/burn_p2p_experiment",
  "crates/burn_p2p_limits",
  "crates/burn_p2p_security",
  "crates/burn_p2p_swarm",
  "crates/burn_p2p_testkit",
  "crates/burn_p2p_ui",
]

[workspace.package]
version = "0.21.0-pre.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["burn_p2p contributors"]
repository = "https://github.com/aberration-technology/burn_p2p"
rust-version = "1.85"
keywords = ["burn", "distributed", "p2p", "federated", "training"]
categories = ["network-programming", "science"]

[workspace.dependencies]
anyhow = "1.0"
burn = { version = "0.21.0-pre.2", default-features = false, features = ["std", "ndarray", "train", "store"] }
burn-store = { version = "0.21.0-pre.2", default-features = false, features = ["std", "burnpack", "safetensors"] }
burn_p2p = { version = "=0.21.0-pre.2", path = "crates/burn_p2p" }
burn_p2p_auth_external = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_auth_external" }
burn_p2p_auth_github = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_auth_github" }
burn_p2p_auth_oidc = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_auth_oidc" }
burn_p2p_auth_oauth = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_auth_oauth" }
burn_p2p_bootstrap = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_bootstrap" }
burn_p2p_browser = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_browser" }
burn_p2p_checkpoint = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_checkpoint" }
burn_p2p_core = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_core" }
burn_p2p_dataloader = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_dataloader" }
burn_p2p_engine = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_engine" }
burn_p2p_experiment = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_experiment" }
burn_p2p_limits = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_limits" }
burn_p2p_metrics = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_metrics" }
burn_p2p_portal = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_portal", default-features = false }
burn_p2p_publish = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_publish" }
burn_p2p_security = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_security" }
burn_p2p_social = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_social", default-features = false }
burn_p2p_swarm = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_swarm" }
burn_p2p_ui = { version = "=0.21.0-pre.2", path = "crates/burn_p2p_ui" }
ciborium = "0.2.2"
chrono = { version = "0.4", features = ["clock", "serde"] }
criterion = "0.5"
hex = "0.4"
multihash = "0.19.3"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
