[package]
name = "burn_p2p"
description = "Stable public facade for peer-to-peer Burn training orchestration."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
burn = { workspace = true, optional = true }
chrono.workspace = true
futures = "0.3"
half = "2"
hex.workspace = true
libp2p-identity = "0.2.13"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
sysinfo = "0.38.4"
burn_p2p_checkpoint.workspace = true
burn_p2p_engine = { workspace = true, optional = true }
burn_p2p_core.workspace = true
burn_p2p_dataloader.workspace = true
burn_p2p_experiment.workspace = true
burn_p2p_limits.workspace = true
burn_p2p_security.workspace = true
burn_p2p_swarm.workspace = true
burn_p2p_views.workspace = true
burn_p2p_workload.workspace = true
thiserror.workspace = true

[features]
default = []
burn = ["dep:burn", "dep:burn_p2p_engine"]

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[example]]
name = "burn_ndarray_runtime"
required-features = ["burn"]

[[bench]]
name = "diloco_codec"
harness = false

[lints]
workspace = true
