[package]
name = "burn_p2p_app"
description = "Optional reference browser/native app surface for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["readonly"]
readonly = []
interactive = ["readonly"]
social = []
browser-join = ["interactive"]
web-client = ["dioxus/web"]
desktop-client = ["dioxus/desktop", "dep:burn_p2p", "dep:tokio"]

[dependencies]
burn_p2p = { workspace = true, optional = true }
burn_p2p_views.workspace = true
dioxus = { version = "0.7.4", default-features = false, features = ["macro", "html", "signals", "hooks", "ssr", "launch"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
burn_p2p_browser.workspace = true
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlInputElement", "Location", "Storage", "Window"] }

[dev-dependencies]
burn_p2p_core.workspace = true
burn_p2p_security.workspace = true
chrono.workspace = true

[lints]
workspace = true
