[package]
name = "burn_p2p_auth_external"
description = "Optional external-proxy and shared provider-mapped auth connectors for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_security = { path = "../burn_p2p_security" }
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
