[package]
name = "burn_p2p_auth_external"
description = "Optional external-proxy and shared provider-mapped auth connectors for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
burn_p2p_core.workspace = true
burn_p2p_security.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
[lints]
workspace = true
