[package]
name = "burn_p2p_auth_external"
description = "Optional external-proxy and shared provider-mapped auth connectors for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
base64 = "0.22"
burn_p2p_core.workspace = true
burn_p2p_security.workspace = true
chrono.workspace = true
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
url = "2"

[dev-dependencies]
[lints]
workspace = true
