[package]
name = "burn_p2p_auth_oauth"
description = "Optional OAuth auth connector for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_auth_external = { path = "../burn_p2p_auth_external" }
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_security = { path = "../burn_p2p_security" }
chrono.workspace = true

[lints]
workspace = true
