[package]
name = "burn_p2p_auth_oidc"
description = "Optional OIDC auth connector for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
publish = false

[dependencies]
burn_p2p_auth_external.workspace = true
burn_p2p_core.workspace = true
burn_p2p_security.workspace = true
chrono.workspace = true

[lints]
workspace = true
