[package]
name = "burn_p2p_checkpoint"
description = "Internal checkpoint, artifact, and merge boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
burn_p2p_core.workspace = true
burn_p2p_experiment.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "artifact_pipeline"
harness = false

[lints]
workspace = true
