[package]
name = "burn_p2p_core"
description = "Internal shared schemas, IDs, and deterministic encodings for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
ciborium.workspace = true
chrono.workspace = true
hex.workspace = true
semver.workspace = true
sha2.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
