[package]
name = "burn_p2p_dataloader"
description = "Dataset planning and lease-assignment boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_core = { path = "../burn_p2p_core" }
burn_p2p_experiment = { path = "../burn_p2p_experiment" }
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "planning"
harness = false

[lints]
workspace = true
