[package]
name = "burn_p2p_engine"
description = "Internal Burn execution engine boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
burn.workspace = true
burn-store.workspace = true
burn_p2p_core.workspace = true
burn_p2p_checkpoint.workspace = true
burn_p2p_experiment.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "module_merge"
harness = false

[lints]
workspace = true
