[package]
name = "burn_p2p_experiment"
description = "Internal study, experiment, revision, and control-plane schemas for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
chrono.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
burn_p2p_core.workspace = true

[lints]
workspace = true
