[package]
name = "burn_p2p_limits"
description = "Capability probing and role-selection boundary crate for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn_p2p_core = { path = "../burn_p2p_core" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "capability"
harness = false

[lints]
workspace = true
