[package]
name = "burn_p2p_portal"
description = "Optional reference portal/product surface for burn_p2p."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["readonly"]
readonly = []
interactive = ["readonly"]
social = []
browser-join = ["interactive"]
web-client = []

[dependencies]
burn_p2p_ui.workspace = true
dioxus = { version = "0.7.4", default-features = false, features = ["macro", "html", "signals", "hooks", "ssr", "launch", "web"] }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
burn_p2p_browser.workspace = true
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlInputElement", "Location", "Storage", "Window"] }

[lints]
workspace = true
